# fmrl

./: .gitignore  ALGORITHM.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  chat_history.md  fmrl.toml  sync_themes.py
docs/: WEB_APP.md  index.html  index.js  style.css  test-accent-color.js  test-size.html  themes.json
docs/pkg/: LICENSE  fmrl.d.ts  fmrl.js  fmrl_bg.wasm  fmrl_bg.wasm.d.ts  package.json
src/: age.rs  decay.rs  decode.rs  encode.rs  error.rs  format.rs  lib.rs  prng.rs  wasm.rs
tests/: age_mutation.rs  aging_decay.rs  chunk_parse.rs  decay_det.rs  roundtrip.rs
