[package]
name = "fmrl"
version = "0.5.0"
edition = "2021"
description = "Ephemeral image codec where files age with every viewing"
repository = "https://github.com/philomont/fmrl"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
flate2 = "1.0"
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
