[package]
name = "fmrl"
version = "0.6.0"
edition = "2021"
description = "Ephemeral image codec where files age with every viewing"
repository = "https://github.com/philomont/fmrl"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
debug-logging = []

[dependencies]
flate2 = "1.0"
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[dev-dependencies]
